--- a/JALG2.html
+++ b/JALG2.html
@@ -5,4 +5,8 @@
 <body bgcolor=green> <table>
 <tr height= 120><td width=360 colspan=3>
 Nombre: Jesús Adrián Lara García</td></tr>
- </html>
+ <tr height= 120><td width=360 colspan=3>
+Nombre: Jesús Adrián Lara García</td></tr>
+ <tr height= 120><td width=360 colspan=3>
+Nombre: Jesús Adrián Lara García</td></tr>
+</html>
