--- a/JALG2.html
+++ b/JALG2.html
@@ -9,4 +9,5 @@ Nombre: Jesús Adrián Lara García</td></tr>
 Nombre: Jesús Adrián Lara García</td></tr>
  <tr height= 120><td width=360 colspan=3>
 Nombre: Jesús Adrián Lara García</td></tr>
+ </table>
 </html>
