--- a/JALG2.html
+++ b/JALG2.html
@@ -4,7 +4,9 @@
 </head>
 <body bgcolor=green> <table>
 <tr height= 120><td width=360 colspan=3>
+ Nombre: Jesús Adrián Lara García</td><td<tr height= 120><td width=360></td><td width=360></td>
 Nombre: Jesús Adrián Lara García</td></tr>
+Nombre: Jesús Adrián Lara García</td></tr></tr>
  <tr height= 120><td width=360 colspan=3>
 Nombre: Jesús Adrián Lara García</td></tr>
  <tr height= 120><td width=360 colspan=3>
