--- a/JALG2.html
+++ b/JALG2.html
@@ -2,7 +2,7 @@
 <head>
 <title>Tabla</title>
 </head>
-<body bgcolor=green> <table>
+<body bgcolor=green> <table width=360 border=3>
 <tr height= 120><td width=360 colspan=3>
  Nombre: Jesús Adrián Lara García</td><td<tr height= 120><td width=360></td><td width=360></td>
 Nombre: Jesús Adrián Lara García</td></tr>
