--- a/JALG2.html
+++ b/JALG2.html
@@ -2,14 +2,14 @@
 <head>
 <title>Tabla</title>
 </head>
-<body bgcolor=green> <table width=360 border=3>
+ <body bgcolor=green></body> <table width=360 border=3>
 <tr height= 120><td width=360 colspan=3>
  Nombre: Jesús Adrián Lara García</td><td<tr height= 120><td width=360></td><td width=360></td>
 Nombre: Jesús Adrián Lara García</td></tr>
 Nombre: Jesús Adrián Lara García</td></tr></tr>
- <tr height= 120><td width=360 colspan=3>
-Nombre: Jesús Adrián Lara García</td></tr>
- <tr height= 120><td width=360 colspan=3>
-Nombre: Jesús Adrián Lara García</td></tr>
+ <tr height= 120><td width=360>
+</td></tr>
+ <tr height= 120><td width=360 >
+</td></tr>
  </table>
 </html>
