--- a/JALG2.html
+++ b/JALG2.html
@@ -5,7 +5,7 @@
  <body bgcolor=green></body> <table width=360 border=3>
 <tr height= 120><td width=360 colspan=3>
  Nombre: Jesús Adrián Lara García</td><td<tr height= 120><td width=360></td><td width=360></td>
-Nombre: Jesús Adrián Lara García</td></tr>
+ Nombre: Jesús Adrián Lara García</td><td width=360></td><td width=360></td></tr>
 Nombre: Jesús Adrián Lara García</td></tr></tr>
  <tr height= 120><td width=360>
 </td></tr>
