--- a/JALG2.html
+++ b/JALG2.html
@@ -7,6 +7,11 @@
  Nombre: Jesús Adrián Lara García
  </td>
  </tr>
+ <tr height=120>
+  <td bgcolor=green width=120>
+   Gustos
+  </td>
+ </tr>
 
  </table>
 </html>
