--- a/JALG2.html
+++ b/JALG2.html
@@ -11,6 +11,11 @@
   <td bgcolor=green width=120>
    Gustos
   </td>
+  <td bgcolor=green width=120>
+Ejemplos
+  </td><td bgcolor=green width=120>
+ Favoritos
+  </td>
  </tr>
 
  </table>
