--- a/JALG2.html
+++ b/JALG2.html
@@ -17,6 +17,15 @@ Ejemplos
  Favoritos
   </td>
  </tr>
+ <tr height=120><td bgcolor=cyan width=120 rowspan=2>
+  Películas</td>
+  <td bgcolor=cherry width=120>
+   3
+  </td>
+ <td bgcolor=cyan width=120 rowspan=2>
+ </tr>
+ 
+  
 
  </table>
 </html>
