--- a/JALG2.html
+++ b/JALG2.html
@@ -19,13 +19,24 @@ Ejemplos
  </tr>
  <tr height=120><td bgcolor=cyan width=120 rowspan=2>
   Películas</td>
-  <td bgcolor=cherry width=120>
+  <td bgcolor=yellow width=120>
    3
   </td>
  <td bgcolor=cyan width=120 rowspan=2>
  </tr>
- 
-  
-
+<tr height=120> 
+  <td></td>
+  <td bgcolor=yellow width=120>
+  4
+ </td>
+  <td>
+  </td>
+ <tr height=120>
+  <td></td>
+    <td bgcolor=yellow width=120>
+5
+  </td>
+  <td></td>
+ </tr>
  </table>
 </html>
