--- a/JALG2.html
+++ b/JALG2.html
@@ -25,18 +25,16 @@ Ejemplos
  <td bgcolor=cyan width=120 rowspan=3>
  </tr>
 <tr height=120>
-  <td></td>
-    <td bgcolor=yellow width=120>
-4
+ <td bgcolor=yellow width=120>
+   4
   </td>
-  <td></td>
  </tr>
  <tr height=120>
-  <td></td>
-    <td bgcolor=yellow width=120>
-5
+ <td bgcolor=yellow width=120>
+   5
   </td>
-  <td></td>
  </tr>
+ <tr height=120>
+ 
  </table>
 </html>
