--- a/JALG2.html
+++ b/JALG2.html
@@ -35,6 +35,26 @@ Ejemplos
   </td>
  </tr>
  <tr height=120>
+ <td bgcolor=red width=120 rowspan=2>
+  Prenda
+  </td>
+  <td bgcolor=orange width=120>
+   6 pantalon
+   </td>
+  <td bgcolor=pink width=120>
+   pongo aqui mi favorito
+ </tr>
+ <tr height=120>
+  <td bgcolor=orange width=120>
+   Camisa
+  </td>
+  <td bgcolor=pink width=120>
+   Pongo mi camisa favorita
+  </td>
+ </tr>
+  
+ 
+ 
  
  </table>
 </html>
