--- a/JALG2.html
+++ b/JALG2.html
@@ -8,12 +8,12 @@
  </td>
  </tr>
  <tr height=120>
-  <td bgcolor=green width=120>
+  <td bgcolor=grey width=120>
    Gustos
   </td>
-  <td bgcolor=green width=120>
+  <td bgcolor=grey width=120>
 Ejemplos
-  </td><td bgcolor=green width=120>
+  </td><td bgcolor=grey width=120>
  Favoritos
   </td>
  </tr>
@@ -52,6 +52,19 @@ Ejemplos
    Pongo mi camisa favorita
   </td>
  </tr>
+ <tr height=120>
+  <td bgcolor=purple width=120>
+   Teléfono
+  </td>
+  <td bgcolor=purple width=120>
+   8 un ejemplo de un telefono
+  </td>
+  <td bgcolor=purple width=120>
+   El telefono favorito que quiero
+  </td>
+ </tr>
+  
+  
   
  
  
