--- a/JALG2.html
+++ b/JALG2.html
@@ -63,6 +63,20 @@ Ejemplos
    El telefono favorito que quiero
   </td>
  </tr>
+ <tr height=120>
+ <td bgcolor=violet width=120 rowspan=2>
+  Comida
+  </td>
+  <td bgcolor=golden width=120>
+  9
+  </td>
+  <td bgcolor=violet width=120 rowspan=2>
+   La comida que más me guste
+    </td>
+    </tr>
+   <tr height=120>
+    <td bgcolor=golden width=120>
+  10
   
   
   
