--- a/JALG2.html
+++ b/JALG2.html
@@ -2,7 +2,7 @@
 <head>
 <title>Tabla</title>
 </head>
- <body bgcolor=green></body> <table width=360 border=3>
+ <body bgcolor=green></body><div align=center> <table width=360 border=3>
 <tr height=120><td bgcolor=cyan width=360 colspan=3>
  Nombre: Jesús Adrián Lara García
  </td>
@@ -77,11 +77,7 @@ Ejemplos
    <tr height=120>
     <td bgcolor=golden width=120>
   10
-  
-  
-  
- 
- 
- 
- </table>
+    </td>
+ </tr>
+ </table></div>
 </html>
