--- a/JALG2.html
+++ b/JALG2.html
@@ -20,18 +20,19 @@ Ejemplos
  <tr height=120><td bgcolor=cyan width=120 rowspan=3>
   Películas</td>
   <td bgcolor=yellow width=120>
-   3
+   star wars rogue one
   </td>
  <td bgcolor=cyan width=120 rowspan=3>
+  Star Wars Rogue One
  </tr>
 <tr height=120>
  <td bgcolor=yellow width=120>
-   4
+Harry Potter las religuias de la muerte parte 2
   </td>
  </tr>
  <tr height=120>
  <td bgcolor=yellow width=120>
-   5
+  Guason 
   </td>
  </tr>
  <tr height=120>
@@ -39,17 +40,17 @@ Ejemplos
   Prenda
   </td>
   <td bgcolor=orange width=120>
-   6 pantalon
+   pantalones de mesclilla y shrots
    </td>
   <td bgcolor=pink width=120>
-   pongo aqui mi favorito
+   pantalones de mesclilla
  </tr>
  <tr height=120>
   <td bgcolor=orange width=120>
-   Camisa
+   Camisa de vestir y camisa casual
   </td>
   <td bgcolor=pink width=120>
-   Pongo mi camisa favorita
+ casual
   </td>
  </tr>
  <tr height=120>
@@ -57,10 +58,10 @@ Ejemplos
    Teléfono
   </td>
   <td bgcolor=purple width=120>
-   8 un ejemplo de un telefono
+    iphone X samsung galaxy s10
   </td>
   <td bgcolor=purple width=120>
-   El telefono favorito que quiero
+   samsung galaxy s10
   </td>
  </tr>
  <tr height=120>
@@ -68,15 +69,15 @@ Ejemplos
   Comida
   </td>
   <td bgcolor=golden width=120>
-  9
+  pizza
   </td>
   <td bgcolor=violet width=120 rowspan=2>
-   La comida que más me guste
+ Pizza
     </td>
     </tr>
    <tr height=120>
     <td bgcolor=golden width=120>
-  10
+  hamburguesas
     </td>
  </tr>
  </table></div>
