--- a/JALG2.html
+++ b/JALG2.html
@@ -2,7 +2,11 @@
 <head>
 <title>Tabla</title>
 </head>
- <body bgcolor=green></body><div align=center> <table width=360 border=3>
+ <body bgcolor=green><h1>Este soy yo </h1>
+  <hr color=“grey” size=4>
+    <hr color=“grey” size=4>
+ 
+ </body><div align=center> <table width=360 border=3>
 <tr height=120><td bgcolor=cyan width=360 colspan=3>
  Nombre: Jesús Adrián Lara García
  </td>
