--- a/JALG2.html
+++ b/JALG2.html
@@ -2,7 +2,8 @@
 <head>
 <title>Tabla</title>
 </head>
- <body bgcolor=green><h1>Este soy yo </h1>
+ <body bgcolor=green><div align=center><h1>Este soy yo </h1></div>
+
   <hr color=“grey” size=4>
     <hr color=“grey” size=4>
  
