--- a/JALG2.html
+++ b/JALG2.html
@@ -7,7 +7,10 @@
   <hr color=“grey” size=4>
     <hr color=“grey” size=4>
  
- </body><div align=center> <table width=360 border=3>
+ </body>
+ <div align=center> 
+  <table width=500 border=3>
+   
 <tr height=120><td bgcolor=cyan width=360 colspan=3>
  Nombre: Jesús Adrián Lara García
  </td>
