--- a/JALG2.html
+++ b/JALG2.html
@@ -49,10 +49,10 @@ Harry Potter las religuias de la muerte parte 2
   Prenda
   </td>
   <td bgcolor=orange width=120>
-   pantalones de mesclilla y shrots
+   pantalones de mezclilla y shrots
    </td>
   <td bgcolor=pink width=120>
-   pantalones de mesclilla
+   pantalones de mezclilla
  </tr>
  <tr height=120>
   <td bgcolor=orange width=120>
