--- a/JALG2.html
+++ b/JALG2.html
@@ -89,5 +89,13 @@ Harry Potter las religuias de la muerte parte 2
   hamburguesas
     </td>
  </tr>
- </table></div>
+ </table>
+ <table width=160 border=3>
+  <tr height=120>
+   <td bgcolor=brown width=120>
+    <h1>Hacia arriba</h1>
+   </td>
+   <td bgcolor=brown width=120>
+    <h1>Hacia arriba</h1>
+  </div>
 </html>
