--- a/JALG2.html
+++ b/JALG2.html
@@ -93,7 +93,7 @@ Harry Potter las religuias de la muerte parte 2
  <table width=160 border=3>
   <tr height=120>
    <td bgcolor=brown width=120>
-    <h1>Hacia arriba</h1>
+    <h1>Nombre</h1>
    </td>
    <td bgcolor=brown width=120>
     <h1>Hacia arriba</h1>
